react,ui: More whitespace fixes

--- a/packages/ui/styles/style.scss
+++ b/packages/ui/styles/style.scss
@@ -139,7 +139,7 @@ a {
   }
 }
 
-.activityCardList {
+.results {
   margin: 0 auto;
   max-width: 40%;
   min-width: 900px;
